# ArdroneVanishingPoint

./: LICENSE  README.md
rnd_presentation/: rnd exam presentation.aux  rnd exam presentation.nav  rnd exam presentation.out  rnd exam presentation.snm  rnd exam presentation.tex  rnd exam presentation.tex.backup  rnd exam presentation.tex~  rnd exam presentation.toc
rnd_presentation/basic drone architecture/: Thumbs.db
rnd_presentation/images/: 123.graphml  Architecture.graphml  Architecture2.graphml  Architecture3.graphml  Architecture4.graphml  example.graphml  executionunit.graphml  failureanalyser.graphml  library.graphml  metriclayer.graphml  metriclayer1.graphml  navigationalgebra1.graphml  navigationarchitecture.graphml  navigationplanner.graphml  oursemanticmap.graphml  oursemanticmap2.graphml  recoveryunit.graphml  sbox.graphml  sboxexample.graphml  sboxexample1.graphml  schedular.graphml  semanticMap1.eps  semanticMap1.graphml  semanticnavigation.graphml  semanticnavigation1.graphml  snp (Case Conflict).graphml  snp.graphml  snp1.graphml  snp11.graphml  snp1_1.graphml  snp2.graphml  snp3.graphml  snp4.graphml  snp5.graphml  snp6.graphml  snp7.graphml  snp_1.graphml  snp_1backup.graphml  snp_legend.graphml  snpconventions.graphml  (+9 more)
source code/controller_vp/: CMakeLists.txt  package.xml
source code/controller_vp/launch/: ArDroneFollower.launch
source code/controller_vp/nodes/: ArdroneController.py  ArdroneFollower.py  pid.py
source code/vanishing_point/: CMakeLists.txt  CMakeLists.txt~  package.xml
source code/vanishing_point/include/: simplecanny.h
source code/vanishing_point/src/: densityVP.cpp  getimages.cpp  main_simplecanny.cpp  simplecanny.cpp  simplecanny_from_images.cpp
videos/: IMG_1055.MOV  IMG_1057.MOV  IMG_1065.MOV
